DPP-142 Remove all ANTLR related files, adjustments to typechecker, creation of type environments